k8s/dataset-browser/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dataset-browser
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: dataset-browser
